<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrackMe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_dialog">DialogActivity</string>
    <string name="userid">UserID</string>
    <string name="userid_summary">registered email</string>
    <string name="passkey">PassKey</string>
    <string name="passkey_summary">PassKey</string>
    <string name="server_location">Server Location</string>
    <string name="server_location_summary">Server to which the locations have to be uploaded, default is the test server</string>
    <string name="server_location_default">https://testtrackme.appspot.com</string>
    <string name="session_id">Sessoin ID</string>
    <string name="session_id_summary">Name assigned for locations captured between start and stop</string>
    <string name="session_id_default">session1</string>
    <string name="capture_frequency">Capture Frequency (seconds)</string>
    <string name="capture_frequency_summary">The frequency at which location data collected</string>
    <string name="capture_frequency_default">10</string>
    <string name="auto_update">Auto Update</string>
    <string name="auto_update_summary">Upload locations automatically</string>
    <string name="update_frequency">Update Frequency (minutes)</string>
    <string name="update_frequency_summary">The rate at which locations have to be uploaded to the server</string>
    <string name="update_frequency_default">15</string>
    <string name="label_lat">Latitude : </string>
    <string name="label_lng">Longitude : </string>
    <string name="label_alt">Altitude : </string>
    <string name="label_accuracy">Accuracy : </string>
    <string name="label_time_stamp">Time Stamp : </string>
    <string name="label_capture_frequency">Capture Frequency : </string>
    <string name="label_update_frequency">Update Frequency : </string>
    <string name="label_current_session_id">Current Session ID : </string>
    <string name="start_capturing">Start Capturing</string>
    <string name="stop_capturing">Stop Capturing</string>
    <string name="new_session">New Session</string>
    <string name="new_session_id">New Session ID</string>
    <string name="upload">Upload</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
