<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/labelLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/label_lat"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/labelLat"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/labelLat"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/labelLng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/labelLat"
        android:text="@string/label_lng"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/lng"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/labelLng"
        android:layout_below="@id/lat"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/labelLng"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/labelAccuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/labelLng"
        android:text="@string/label_accuracy"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/accuracy"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/labelAccuracy"
        android:layout_below="@id/lng"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/labelAccuracy"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/labelTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/labelAccuracy"
        android:text="@string/label_time_stamp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/timeStamp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/labelTimeStamp"
        android:layout_below="@id/accuracy"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/labelTimeStamp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/labelCaptureInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/labelTimeStamp"
        android:text="@string/label_capture_interval"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/valueCaptureInterval"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/labelCaptureInterval"
        android:layout_below="@id/timeStamp"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/labelCaptureInterval"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/labelUpdateInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/labelCaptureInterval"
        android:text="@string/label_update_interval"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/valueUpdateInterval"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/labelUpdateInterval"
        android:layout_below="@id/valueCaptureInterval"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/labelUpdateInterval"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/labelSessionID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/labelUpdateInterval"
        android:text="@string/label_current_session_id"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/valueSessionID"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/labelSessionID"
        android:layout_below="@id/valueUpdateInterval"
        android:layout_marginLeft="10dp"
        android:layout_toRightOf="@id/labelSessionID"
        android:textSize="20sp" />

    <Button
        android:id="@+id/startStop"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:enabled="false"
        android:onClick="onClickStartStop"
        android:text="@string/start_capturing" />

    <Button
        android:id="@+id/new_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/startStop"
        android:layout_alignLeft="@id/startStop"
        android:layout_alignRight="@id/startStop"
        android:layout_marginBottom="15dp"
        android:onClick="onClickNewSession"
        android:text="@string/new_session" />

    <Button
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/new_session"
        android:layout_alignLeft="@id/new_session"
        android:layout_alignRight="@id/new_session"
        android:layout_marginBottom="15dp"
        android:onClick="onClickUpload"
        android:text="@string/upload" />

</RelativeLayout>